--- a/_config.yml
+++ b/_config.yml
@@ -101,11 +101,11 @@ analytics:
 
 # Site Author
 author:
-  name             : "Your Name"
-  avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "I am an **amazing** person."
-  location         : "Somewhere"
-  email            :
+  name             : "Dareunk"
+  avatar           : "/assets/images/cutie.jpg"
+  bio              : "Biotechnology + Computer Engineering"
+  location         : "Seoul"
+  email            : "happyeunnn11@gmail.com"
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
