--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,7 @@ analytics:
 # Site Author
 author:
   name             : "Dareunk"
-  avatar           : "/assets/images/cutie.jpg"
+  avatar           : "/assets/images/char.jpg"
   bio              : "Biotechnology + Computer Engineering"
   location         : "Seoul"
   email            : "happyeunnn11@gmail.com"
