Add the link of my programming blog
Signed-off-by: eunjin choi <83913407+dareunk@users.noreply.github.com>

--- a/_config.yml
+++ b/_config.yml
@@ -106,6 +106,7 @@ author:
   bio              : "Biotechnology + Computer Engineering"
   location         : "Seoul"
   email            : "happyeunnn11@gmail.com"
+  Programming Blog : "https://happyeunjin.tistory.com"
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
