--- a/_config.yml
+++ b/_config.yml
@@ -106,11 +106,10 @@ author:
   bio              : "Biotechnology + Computer Engineering"
   location         : "Seoul"
   email            : "happyeunnn11@gmail.com"
-  Programming Blog : "https://happyeunjin.tistory.com"
   links:
-    - label: "Email"
-      icon: "fas fa-fw fa-envelope-square"
-      # url: "mailto:your.name@email.com"
+    - label: "Programming Blog"
+      icon: "fas fa-fw fa-link"
+      url: ""https://happyeunjin.tistory.com""
     - label: "Website"
       icon: "fas fa-fw fa-link"
       # url: "https://your-website.com"
