Fix the error in the _config.yml
Signed-off-by: eunjin choi <83913407+dareunk@users.noreply.github.com>

--- a/_config.yml
+++ b/_config.yml
@@ -109,7 +109,7 @@ author:
   links:
     - label: "Programming Blog"
       icon: "fas fa-fw fa-link"
-      url: ""https://happyeunjin.tistory.com""
+      url: "https://happyeunjin.tistory.com"
     - label: "Website"
       icon: "fas fa-fw fa-link"
       # url: "https://your-website.com"
